# Cplusplus-Project-Media-Player

./: .gitignore  DEADJOE  README.md
src/: README.md
src/build-qt-player-Desktop-Debug/: Makefile  ui_player.h
src/build-qt-project-Desktop-Debug/: Makefile  moc_player.cpp  qrc_resources.cpp  qt-project  ui_player.h
src/build-qt-project-Desktop_Qt_5_5_1_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
src/build-qt-project-Desktop_Qt_5_5_1_MinGW_32bit-Debug/debug/: moc_player.cpp  qrc_resources.cpp
src/build-qt-project-Desktop_Qt_5_5_1_clang_64bit-Debug/: Makefile  moc_fftcalc.cpp  qrc_resources.cpp
src/build-qt-project-Desktop_Qt_5_5_1_clang_64bit-Debug/qt-project.app/Contents/: Info.plist
src/build-qt-project-Desktop_Qt_5_5_1_clang_64bit-Debug/qt-project.app/Contents/MacOS/: qt-project
src/qt-player/: player.cpp  player.h  player.ui  qt-player.pro  qt-player.pro.user.f33db4d
src/qt-project/: .nfs0000000082af867e00006044  Makefile  main.cpp  moc_player.cpp  player.cpp  player.h  player.ui  playlist.cpp  playlist.h  qt-project  qt-project.pro  resources.qrc  trackfile.cpp  trackfile.h  ui_player.h
src/simple-audio-player(SFML)/: CMakeLists.txt  README.md  app  command.txt  main.cpp
